Added paragraph formatting to GEN 1

--- a/built/NewEra_html/b001.html
+++ b/built/NewEra_html/b001.html
@@ -124,36 +124,78 @@
 <!-- 1   001 -->
 
 
-<p><span class="chapter" id="1  001">1  </span><span class="dropcap">I</span>n the beginning God made the heaven and the earth.  <span class="verse" rel="v0011  002" id="1  002" >2</span>
+<p><span class="chapter" id="1  001">1  </span><span class="dropcap">I</span>n the beginning God made the heaven and the earth.  
+<!-- 1   001 -->
+
+
+<p><span class="verse" rel="v0011  002" id="1  002" >2</span>
  But the earth was unsightly and unfurnished, and darkness was over the deep, and the Spirit of God moved over the water.  <span class="verse" rel="v0011  003" id="1  003" >3</span>
  And God said, Let there be light, and there was light.  <span class="verse" rel="v0011  004" id="1  004" >4</span>
  And God saw the light that it was good, and God divided between the light  <span class="rightnotemarker">*</span><span class="rightnote">        Gr. and between the darkness. Hebraism.  </span> and the darkness.  <span class="verse" rel="v0011  005" id="1  005" >5</span>
- And God called the light Day, and the darkness he called Night, and there was evening and there was morning, the first day.  <span class="verse" rel="v0011  006" id="1  006" >6</span>
+ And God called the light Day, and the darkness he called Night, and there was evening and there was morning, the first day.  
+<!-- 1   005 -->
+
+
+<p><span class="verse" rel="v0011  006" id="1  006" >6</span>
  And God said, Let there be a firmament in the midst of the water, and let it be a division between water and water, and it was so.  <span class="verse" rel="v0011  007" id="1  007" >7</span>
  And God made the firmament, and God divided between the water which was under the firmament and the water which was above the firmament.  <span class="verse" rel="v0011  008" id="1  008" >8</span>
- And God called the firmament Heaven, and God saw that it was good, and there was evening and there was morning, the second day.  <span class="verse" rel="v0011  009" id="1  009" >9</span>
+ And God called the firmament Heaven, and God saw that it was good, and there was evening and there was morning, the second day.  
+<!-- 1   008 -->
+
+
+<p><span class="verse" rel="v0011  009" id="1  009" >9</span>
  And God said, Let the water which is under the heaven be collected into one  <span class="rightnotemarker">*</span><span class="rightnote">        Gr. meeting  </span>  place, and let the dry land appear, and it was so. And the water which was under the heaven was collected into its places,  <span class="rightnotemarker">*</span><span class="rightnote">        Gr. their meetings  </span>  and the dry land appeared.  <span class="verse" rel="v0011  010" id="1  010" >10</span>
- And God called the dry land Earth, and the  <span class="rightnotemarker">*</span><span class="rightnote">        Gr. systems.  </span>  gatherings of the waters he called Seas, and God saw that it was good.  <span class="verse" rel="v0011  011" id="1  011" >11</span>
+ And God called the dry land Earth, and the  <span class="rightnotemarker">*</span><span class="rightnote">        Gr. systems.  </span>  gatherings of the waters he called Seas, and God saw that it was good.  
+<!-- 1   010 -->
+
+
+<p><span class="verse" rel="v0011  011" id="1  011" >11</span>
  And God said, Let the earth bring forth the herb of grass  <span class="rightnotemarker">*</span><span class="rightnote">        Gr. sowing.  </span>  bearing seed according to its kind  <span class="rightnotemarker">*</span><span class="rightnote">        Gr. λ Alex. + εἰς ὁμοιότητα.  </span>  and according to its likeness, and the fruit tree bearing fruit whose seed is in it, according to its kind on the earth, and it was so.  <span class="verse" rel="v0011  012" id="1  012" >12</span>
  And the earth brought forth the herb of grass bearing seed according to its kind and according to its likeness, and the fruit tree bearing fruit whose seed is in it, according to its kind on the earth, and God saw that it was good.  <span class="verse" rel="v0011  013" id="1  013" >13</span>
- And there was evening and there was morning, the third day.  <span class="verse" rel="v0011  014" id="1  014" >14</span>
+ And there was evening and there was morning, the third day.  
+<!-- 1   013 -->
+
+
+<p><span class="verse" rel="v0011  014" id="1  014" >14</span>
  And God said, Let there be lights in the firmament of the heaven  <span class="rightnotemarker">*</span><span class="rightnote">        Gr. for light or shining.  </span>  to give light upon the earth, to divide between day and night, and let them be for signs and for seasons and for days and for years.  <span class="verse" rel="v0011  015" id="1  015" >15</span>
  And let them be for light in the firmament of the heaven, so as to shine upon the earth, and it was so.  <span class="verse" rel="v0011  016" id="1  016" >16</span>
  And God made the two great lights, the greater light for regulating the day and the lesser light for regulating the night, the stars also.  <span class="verse" rel="v0011  017" id="1  017" >17</span>
  And God placed them in the firmament of the heaven, so as to shine upon the earth,  <span class="verse" rel="v0011  018" id="1  018" >18</span>
  and to regulate day and night, and to divide between the light and the darkness. And God saw that it was good.  <span class="verse" rel="v0011  019" id="1  019" >19</span>
- And there was evening and there was morning, the fourth day.  <span class="verse" rel="v0011  020" id="1  020" >20</span>
+ And there was evening and there was morning, the fourth day.  
+<!-- 1   019 -->
+
+
+<p><span class="verse" rel="v0011  020" id="1  020" >20</span>
  And God said, Let the waters bring forth reptiles  <span class="rightnotemarker">*</span><span class="rightnote">        lit, of living souls  </span>  having life, and winged creatures flying above the earth in the firmament of heaven, and it was so.  <span class="verse" rel="v0011  021" id="1  021" >21</span>
  And God made great  <span class="rightnotemarker">*</span><span class="rightnote">        Or, probably any large fish, or marine animals, whether cetaceous or not.  </span>  whales, and  <span class="rightnotemarker">*</span><span class="rightnote">        Gr. every soul of living reptiles.  </span>  every living reptile, which the waters brought forth according to their kinds, and every creature that flies with wings according to its kind, and God saw that they were good.  <span class="verse" rel="v0011  022" id="1  022" >22</span>
  And God blessed them saying, Increase and multiply and fill the waters in the seas, and let the creatures that fly be multiplied on the earth.  <span class="verse" rel="v0011  023" id="1  023" >23</span>
- And there was evening and there was morning, the fifth day.  <span class="verse" rel="v0011  024" id="1  024" >24</span>
+ And there was evening and there was morning, the fifth day.  
+<!-- 1   023 -->
+
+
+<p><span class="verse" rel="v0011  024" id="1  024" >24</span>
  And God said, Let the earth bring forth the living  <span class="rightnotemarker">*</span><span class="rightnote">        Gr. soul.  </span>  creature according to its kind, quadrupeds and reptiles and wild beasts of the earth according to their kind, and it was so.  <span class="verse" rel="v0011  025" id="1  025" >25</span>
- And God made the wild beasts of the earth according to their kind, and cattle according to their kind, and all the reptiles of the earth according to their kind, and God saw that they were good.  <span class="verse" rel="v0011  026" id="1  026" >26</span>
- And God said, Let us make man according to our image and likeness, and let them have dominion over the fish of the sea, and over the flying creatures of heaven, and over the cattle and all the earth, and over all the reptiles that creep on the earth.  <span class="verse" rel="v0011  027" id="1  027" >27</span>
- And God made man, according to the image of God          Matt 19:4    he made him, male and female he made them.  <span class="verse" rel="v0011  028" id="1  028" >28</span>
+ And God made the wild beasts of the earth according to their kind, and cattle according to their kind, and all the reptiles of the earth according to their kind, and God saw that they were good.  
+<!-- 1   025 -->
+
+
+<p><span class="verse" rel="v0011  026" id="1  026" >26</span>
+ And God said, Let us make man according to our image and likeness, and let them have dominion over the fish of the sea, and over the flying creatures of heaven, and over the cattle and all the earth, and over all the reptiles that creep on the earth.  
+<p class="indent2"><span class="verse" rel="v0011  027" id="1  027" >27</span>
+ And God made man, according to the image of God          Matt 19:4    he made him, male and female he made them.  
+<p class="indent1">
+<!-- 1   027 -->
+
+
+<p><span class="verse" rel="v0011  028" id="1  028" >28</span>
  And God blessed them, saying, Increase and multiply, and fill the earth and subdue it, and have dominion over the fish of the seas and flying creatures of heaven, and all the cattle and all the earth, and all the reptiles that creep on the earth.  <span class="verse" rel="v0011  029" id="1  029" >29</span>
  And God said, Behold I have given to you every seed-bearing herb sowing seed which is upon all the earth, and every tree which has in itself the fruit of seed that is sown, to you it shall be for food.  <span class="verse" rel="v0011  030" id="1  030" >30</span>
- And to all the wild beasts of the earth, and to all the flying creatures of heaven, and to every reptile creeping on the earth, which has in itself the  <span class="rightnotemarker">*</span><span class="rightnote">        Gr. soul.  </span>  breath of life, even every green plant for food; and it was so.  <span class="verse" rel="v0011  031" id="1  031" >31</span>
+ And to all the wild beasts of the earth, and to all the flying creatures of heaven, and to every reptile creeping on the earth, which has in itself the  <span class="rightnotemarker">*</span><span class="rightnote">        Gr. soul.  </span>  breath of life, even every green plant for food; and it was so.  
+<!-- 1   030 -->
+
+
+<p><span class="verse" rel="v0011  031" id="1  031" >31</span>
  And God saw all the things that he had made, and, behold, they were very good. And there was evening and there was morning, the sixth day.  
 <!-- 2   031 -->
 
