--- a/index.html
+++ b/index.html
@@ -58,10 +58,7 @@
 <a href="b036.html">Zephaniah</a></br>
 <a href="b037.html">Haggai</a></br>
 <a href="b038.html">Zechariah</a></br>
-        </p>
-        <h2>New Testament</h2>
-        <p>
-        
+<a href="b039.html">Malachi</a></br>
 <a href="b040.html">Tobit</a></br>
 <a href="b041.html">Judith</a></br>
 <a href="b042.html">Wisdom&nbsp;of&nbsp;Solomon</a></br>
@@ -76,7 +73,10 @@
 <a href="b051.html">1&nbsp;Esdras</a></br>
 <a href="b052.html">Prayer&nbsp;of&nbsp;Manasses</a></br>
 <a href="b053.html">3&nbsp;Maccabees</a></br>
-<a href="b054.html">4&nbsp;Maccabees</a></br>
+        </p>
+        <h2>New Testament</h2>
+        <p>
+        
 <a href="b055.html">Matthew</a></br>
 <a href="b056.html">Mark</a></br>
 <a href="b057.html">Luke</a></br>
@@ -89,6 +89,20 @@
 <a href="b064.html">Ephesians</a></br>
 <a href="b065.html">Philippians</a></br>
 <a href="b066.html">Colossians</a></br>
+<a href="b067.html">1&nbsp;Thessalonians</a></br>
+<a href="b068.html">2&nbsp;Thessalonians</a></br>
+<a href="b069.html">1&nbsp;Timothy</a></br>
+<a href="b070.html">2&nbsp;Timothy</a></br>
+<a href="b071.html">Titus</a></br>
+<a href="b072.html">Philemon</a></br>
+<a href="b073.html">Hebrews</a></br>
+<a href="b074.html">James</a></br>
+<a href="b075.html">1&nbsp;Peter</a></br>
+<a href="b076.html">2&nbsp;Peter</a></br>
+<a href="b077.html">1&nbsp;John</a></br>
+<a href="b078.html">2&nbsp;John</a></br>
+<a href="b079.html">3&nbsp;John</a></br>
+<a href="b080.html">Jude</a></br>
         </p>
 </body>   
 </html> 
