--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 <a href="b051.html">1&nbsp;Esdras</a></br>
 <a href="b052.html">Prayer&nbsp;of&nbsp;Manasses</a></br>
 <a href="b053.html">3&nbsp;Maccabees</a></br>
+<a href="b054.html">4&nbsp;Maccabees</a></br>
         </p>
         <h2>New Testament</h2>
         <p>
@@ -103,6 +104,7 @@
 <a href="b078.html">2&nbsp;John</a></br>
 <a href="b079.html">3&nbsp;John</a></br>
 <a href="b080.html">Jude</a></br>
+<a href="b081.html">Revelation</a></br>
         </p>
 </body>   
 </html> 
