Formatted GEN for printing/editing

--- a/built/NewEra_html/b001.html
+++ b/built/NewEra_html/b001.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-<div id="nav-menu">
+<!-- <div id="nav-menu">
     <input id="menubar" type="checkbox" name="menu" class="label" />
     <label for="menubar">New Era Bible &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Genesis &#9660;</label>
     <div class="submenu">
@@ -117,8 +117,8 @@
 <li class="label3">Revelation</li>
 </ul>
     </div>
-</div>
-
+</div> -->
+<h1>Genesis</h1>
 <p>&nbsp;</p>
 
 <!-- 1   001 -->
