--- a/built/NewEra_html/index.html
+++ b/built/NewEra_html/index.html
@@ -21,90 +21,90 @@
         <p>
         
 <a href="b001.html">Genesis</a></br>
-Exodus</br>
-Leviticus</br>
-Numbers</br>
-Deuteronomy</br>
-Joshua</br>
-Judges</br>
-Ruth</br>
-1 Samuel</br>
-2 Samuel</br>
-1 Kings</br>
-2 Kings</br>
-1 Chronicles</br>
-2 Chronicles</br>
-Ezra</br>
-Nehemiah</br>
-Esther</br>
-Job</br>
-Psalms</br>
-Proverbs</br>
-Ecclesiastes</br>
-Song of Solomon</br>
-Isaiah</br>
-Jeremiah</br>
-Lamentations</br>
-Ezekiel</br>
-Daniel</br>
-Hosea</br>
-Joel</br>
-Amos</br>
-Obadiah</br>
-Jonah</br>
-Micah</br>
-Nahum</br>
-Habakkuk</br>
-Zephaniah</br>
-Haggai</br>
-Zechariah</br>
-Malachi</br>
-Tobit</br>
-Judith</br>
-Wisdom of Solomon</br>
-Sirach</br>
-Baruch</br>
-Letter of Jeremiah</br>
-Prayer of Azariah</br>
-Susanna</br>
-Bel and the Dragon</br>
-1 Maccabees</br>
-2 Maccabees</br>
-1 Esdras</br>
-Prayer of Manasses</br>
-3 Maccabees</br>
-4 Maccabees</br>
+<a href="b002.html">Exodus</a></br>
+<a href="b003.html">Leviticus</a></br>
+<a href="b004.html">Numbers</a></br>
+<a href="b005.html">Deuteronomy</a></br>
+<a href="b006.html">Joshua</a></br>
+<a href="b007.html">Judges</a></br>
+<a href="b008.html">Ruth</a></br>
+<a href="b009.html">1&nbsp;Samuel</a></br>
+<a href="b010.html">2&nbsp;Samuel</a></br>
+<a href="b011.html">1&nbsp;Kings</a></br>
+<a href="b012.html">2&nbsp;Kings</a></br>
+<a href="b013.html">1&nbsp;Chronicles</a></br>
+<a href="b014.html">2&nbsp;Chronicles</a></br>
+<a href="b015.html">Ezra</a></br>
+<a href="b016.html">Nehemiah</a></br>
+<a href="b017.html">Esther</a></br>
+<a href="b018.html">Job</a></br>
+<a href="b019.html">Psalms</a></br>
+<a href="b020.html">Proverbs</a></br>
+<a href="b021.html">Ecclesiastes</a></br>
+<a href="b022.html">Song&nbsp;of&nbsp;Solomon</a></br>
+<a href="b023.html">Isaiah</a></br>
+<a href="b024.html">Jeremiah</a></br>
+<a href="b025.html">Lamentations</a></br>
+<a href="b026.html">Ezekiel</a></br>
+<a href="b027.html">Daniel</a></br>
+<a href="b028.html">Hosea</a></br>
+<a href="b029.html">Joel</a></br>
+<a href="b030.html">Amos</a></br>
+<a href="b031.html">Obadiah</a></br>
+<a href="b032.html">Jonah</a></br>
+<a href="b033.html">Micah</a></br>
+<a href="b034.html">Nahum</a></br>
+<a href="b035.html">Habakkuk</a></br>
+<a href="b036.html">Zephaniah</a></br>
+<a href="b037.html">Haggai</a></br>
+<a href="b038.html">Zechariah</a></br>
+<a href="b039.html">Malachi</a></br>
+<a href="b040.html">Tobit</a></br>
+<a href="b041.html">Judith</a></br>
+<a href="b042.html">Wisdom&nbsp;of&nbsp;Solomon</a></br>
+<a href="b043.html">Sirach</a></br>
+<a href="b044.html">Baruch</a></br>
+<a href="b045.html">Letter&nbsp;of&nbsp;Jeremiah</a></br>
+<a href="b046.html">Prayer&nbsp;of&nbsp;Azariah</a></br>
+<a href="b047.html">Susanna</a></br>
+<a href="b048.html">Bel&nbsp;and&nbsp;the&nbsp;Dragon</a></br>
+<a href="b049.html">1&nbsp;Maccabees</a></br>
+<a href="b050.html">2&nbsp;Maccabees</a></br>
+<a href="b051.html">1&nbsp;Esdras</a></br>
+<a href="b052.html">Prayer&nbsp;of&nbsp;Manasses</a></br>
+<a href="b053.html">3&nbsp;Maccabees</a></br>
+<a href="b054.html">4&nbsp;Maccabees</a></br>
         </p>
         <h2>New Testament</h2>
         <p>
         
-Matthew</br>
-Mark</br>
-Luke</br>
-John</br>
-Acts</br>
-Romans</br>
-1 Corinthians</br>
-2 Corinthians</br>
-Galatians</br>
-Ephesians</br>
-Philippians</br>
-Colossians</br>
-1 Thessalonians</br>
-2 Thessalonians</br>
-1 Timothy</br>
-2 Timothy</br>
-Titus</br>
-Philemon</br>
-Hebrews</br>
-James</br>
-1 Peter</br>
-2 Peter</br>
-1 John</br>
-2 John</br>
-3 John</br>
-Jude</br>
-Revelation</br>
+<a href="b055.html">Matthew</a></br>
+<a href="b056.html">Mark</a></br>
+<a href="b057.html">Luke</a></br>
+<a href="b058.html">John</a></br>
+<a href="b059.html">Acts</a></br>
+<a href="b060.html">Romans</a></br>
+<a href="b061.html">1&nbsp;Corinthians</a></br>
+<a href="b062.html">2&nbsp;Corinthians</a></br>
+<a href="b063.html">Galatians</a></br>
+<a href="b064.html">Ephesians</a></br>
+<a href="b065.html">Philippians</a></br>
+<a href="b066.html">Colossians</a></br>
+<a href="b067.html">1&nbsp;Thessalonians</a></br>
+<a href="b068.html">2&nbsp;Thessalonians</a></br>
+<a href="b069.html">1&nbsp;Timothy</a></br>
+<a href="b070.html">2&nbsp;Timothy</a></br>
+<a href="b071.html">Titus</a></br>
+<a href="b072.html">Philemon</a></br>
+<a href="b073.html">Hebrews</a></br>
+<a href="b074.html">James</a></br>
+<a href="b075.html">1&nbsp;Peter</a></br>
+<a href="b076.html">2&nbsp;Peter</a></br>
+<a href="b077.html">1&nbsp;John</a></br>
+<a href="b078.html">2&nbsp;John</a></br>
+<a href="b079.html">3&nbsp;John</a></br>
+<a href="b080.html">Jude</a></br>
+<a href="b081.html">Revelation</a></br>
         </p>
 </body>   
 </html> 
